# txtstyle-rs

./: Cargo.toml  README.md
src/: confparser.rs  default_conf.conf  lib.rs  linestyle.rs  main.rs  palette.rs  transformer.rs
tests/: txtstyle_test.rs
